--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.0",
     "file-saver": "^2.0.2",
+    "material-ui-dropzone": "^2.4.7",
+    "mobx": "^4.15.2",
+    "mobx-react-lite": "^1.5.2",
+    "mobx-utils": "^5.5.3",
     "pako": "^1.0.10",
     "react": "^16.12.0",
+    "react-app-polyfill": "^1.0.6",
     "react-dom": "^16.12.0",
     "typescript": "^3.7.5"
   },
