--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.9.0",
+    "@material-ui/icons": "^4.5.1",
     "file-saver": "^2.0.2",
-    "material-ui-dropzone": "^2.4.7",
     "mobx": "^4.15.2",
     "mobx-react-lite": "^1.5.2",
     "mobx-utils": "^5.5.3",
