--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.9.0",
-    "@material-ui/icons": "^4.5.1",
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
+    "@mui/material": "^5.6.3",
     "file-saver": "^2.0.2",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "mobx-utils": "^6.0.5",
     "pako": "^2.0.4",
-    "react": "^16.12.0",
+    "react": "^18.1.0",
     "react-app-polyfill": "^3.0.0",
-    "react-dom": "^16.12.0",
+    "react-dom": "^18.1.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
@@ -23,8 +25,8 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^12.12.25",
     "@types/pako": "^1.0.1",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.0",
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "prettier": "2.2.1",
